Add video block for KI

--- a/index.html
+++ b/index.html
@@ -67,9 +67,18 @@
         <section class="work-list">
             <!-- Case 1 -->
             <div class="work-list-block">
-                <div class="work-list-block__img">
-                    <img src="assets/content-3.png" alt="Кредитная история - Т-Банк" class="work-list-block__image">
-                </div>
+                <section class="phone-showcase">
+                    <div class="phone-showcase__container">
+                        <div class="phone-showcase__mockup">
+                            <div class="phone-showcase__frame">
+                                <img src="assets/phoneMockup.png" alt="Phone mockup" class="phone-showcase__frame-img">
+                                <div class="phone-showcase__content">
+                                    <img src="assets/contentImg.png" alt="Content" class="phone-showcase__content-img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div class="work-list-block__info">
                     <h2 class="work-list-block__header">Кредитная история <span class="work-list-block__company">• Т–Банк</span></h2>
                     <p class="work-list-block__description">
