--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мирзомансур Охунов - Портфолио</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Mirzomansur Okhunov</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/variables.css">
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header class="header">
             <h1 class="header__name">Мирзомансур Охунов</h1>
-            <p class="header__date">Обновлено 12 Окт 2025</p>
+            <p class="header__date">Обновлено 29 Янв 2026</p>
         </header>
 
         <!-- About Text -->
         <section class="about-text">
             <p class="about-text__description">
-                Я продуктовый дизайнер родом из Таджикистана. Уже 4 года проектирую и прототипирую цифровые продукты. В свободное время занимаюсь вайбкодингом.
+                Я продуктовый дизайнер из Таджикистана. Уже 4 года проектирую и прототипирую цифровые продукты. В свободное время изучаю ИИ инструменты и экспериментирую с вайбкодингом.
             </p>
         </section>
 
@@ -32,7 +34,7 @@
         <!-- About Experience -->
         <section class="about-experience">
             <p class="about-experience__text">
-                Сейчас работаю в <a href="#" class="link">Т–Банке ↗</a>, отвечаю за опыт клиентов пользование кредитами.
+                Сейчас работаю в <a href="https://www.tbank.ru/" class="link">Т–Банке ↗</a> и отвечаю за клиентский опыт в кредитных продуктах.
             </p>
             <p class="about-experience__text">
                 Вы можете написать мне в тг <a href="https://t.me/mirzozm" class="link">@mirzozm ↗</a> или на почту <a href="mailto:mirzo.okhunov@gmail.com" class="link">mirzo.okhunov@gmail.com ↗</a>
@@ -68,12 +70,16 @@
             <!-- Case 1 -->
             <div class="work-list-block">
                 <section class="phone-showcase">
-                    <div class="phone-showcase__container">
-                        <div class="phone-showcase__mockup">
-                            <div class="phone-showcase__frame">
-                                <img src="assets/phoneMockup.png" alt="Phone mockup" class="phone-showcase__frame-img">
-                                <div class="phone-showcase__content">
-                                    <img src="assets/contentImg.png" alt="Content" class="phone-showcase__content-img">
+                    <div class="phone-showcase__content">
+                        <div class="phone-showcase__phone-container">
+                            <div class="phone-showcase__phone">
+                                <img src="assets/CreditHistory.png" alt="Кредитная история" class="phone-showcase__frame-img" width="227.5" height="450">
+                                <div class="phone-showcase__phone-content">
+                                    <div class="phone-showcase__player">
+                                        <div class="phone-showcase__player-inner">
+                                            <video src="assets/drink-tea.mp4" class="phone-showcase__video" preload="auto" autoplay loop muted playsinline webkit-playsinline></video>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -82,7 +88,7 @@
                 <div class="work-list-block__info">
                     <h2 class="work-list-block__header">Кредитная история <span class="work-list-block__company">• Т–Банк</span></h2>
                     <p class="work-list-block__description">
-                        В T-Bank я переработал раздел кредитного рейтинга. Сначала разобрался в текущих проблемах, затем разработал концепцию, защитил дизайн и передал его в разработку.
+                        В Т–Банке я переработал раздел кредитного рейтинга: выделил ключевые проблемы в текущем опыте, предложил новую концепцию, согласовал её со стейкхолдерами и передал дизайн в разработку.
                     </p>
                     <p class="work-list-block__status">Кейс оформляется</p>
                 </div>
@@ -90,13 +96,26 @@
 
             <!-- Case 2 -->
             <div class="work-list-block">
-                <div class="work-list-block__img">
-                    <img src="assets/content-2.png" alt="Концепт страницы прематча - Winline" class="work-list-block__image">
-                </div>
+                <section class="phone-showcase">
+                    <div class="phone-showcase__content">
+                        <div class="phone-showcase__phone-container">
+                            <div class="phone-showcase__phone">
+                                <img src="assets/WinlineConcept.png" alt="Концепт страницы прематча Winline" class="phone-showcase__frame-img" width="227.5" height="450">
+                                <div class="phone-showcase__phone-content">
+                                    <div class="phone-showcase__player">
+                                        <div class="phone-showcase__player-inner">
+                                            <img src="assets/content-2.png" alt="Концепт страницы прематча - Winline" class="phone-showcase__video">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div class="work-list-block__info">
                     <h2 class="work-list-block__header">Концепт страницы прематча <span class="work-list-block__company">• Winline</span></h2>
                     <p class="work-list-block__description">
-                        Я проектировал концепт прематча, в рамках тестового задания, который помогает пользователям, интересующимся киберспортом, делать ставки на предстоящие события.
+                        В рамках тестового задания для Winline я спроектировал концепт прематча для киберспорта: помог пользователям быстрее находить матчи, сравнивать коэффициенты и делать ставки на предстоящие события.
                     </p>
                     <a href="#" class="work-list-block__link">Прочитать кейс ↗</a>
                 </div>
@@ -104,13 +123,15 @@
 
             <!-- Case 3 -->
             <div class="work-list-block">
-                <div class="work-list-block__img">
-                    <img src="assets/content-1.png" alt="Дизайн система - pro.finansy" class="work-list-block__image">
-                </div>
+                <section class="phone-showcase phone-showcase--lottie">
+                    <div class="phone-showcase__content">
+                        <div class="phone-showcase__lottie" id="lottie-case3" aria-label="Дизайн система pro.finansy"></div>
+                    </div>
+                </section>
                 <div class="work-list-block__info">
                     <h2 class="work-list-block__header">Дизайн система <span class="work-list-block__company">• pro.finansy</span></h2>
                     <p class="work-list-block__description">
-                        В pro.finansy я инициировал и разработал дизайн-систему, чтобы выровнять работу дизайнеров и разработчиков и сделать продукт консистентным во всех разделах.
+                        В pro.finansy я дал старт дизайн системе и разработал ui-кит, чтобы синхронизировать работу дизайнеров и разработчиков и сделать продукт визуально и поведенчески консистентным во всех разделах.
                     </p>
                     <a href="#" class="work-list-block__link">Прочитать кейс ↗</a>
                 </div>
@@ -118,13 +139,26 @@
 
             <!-- Case 4 -->
             <div class="work-list-block">
-                <div class="work-list-block__img">
-                    <img src="assets/content.png" alt="Концепт фитнес приложения - DDX Fitnes" class="work-list-block__image">
-                </div>
+                <section class="phone-showcase">
+                    <div class="phone-showcase__content">
+                        <div class="phone-showcase__phone-container">
+                            <div class="phone-showcase__phone">
+                                <img src="assets/FitnessDDX.png" alt="Концепт фитнес приложения DDX Fitnes" class="phone-showcase__frame-img" width="227.5" height="450">
+                                <div class="phone-showcase__phone-content">
+                                    <div class="phone-showcase__player">
+                                        <div class="phone-showcase__player-inner">
+                                            <img src="assets/content.png" alt="Концепт фитнес приложения - DDX Fitnes" class="phone-showcase__video">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div class="work-list-block__info">
                     <h2 class="work-list-block__header">Концепт фитнес приложения <span class="work-list-block__company">• DDX Fitnes</span></h2>
                     <p class="work-list-block__description">
-                        Тестовое задание, в котором я спроектировал основной пользовательский флоу: онбординг после оформления подписки, процесс записи к тренеру и экран тренера.
+                        В тестовом задании для DDX Fitnes я спроектировал основной пользовательский сценарий: флоу подбора тренера, запись к тренеру и экран тренера с ключевыми данными.
                     </p>
                     <a href="#" class="work-list-block__link">Прочитать кейс ↗</a>
                 </div>
@@ -133,9 +167,10 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p class="footer__text">Пока!</p>
-            <p class="footer__subtext">Навайбокидил сам</p>
+            <p class="footer__subtext">Навайбокожено by Mirzo</p>
         </footer>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js"></script>
+    <script src="js/lottie-case3.js"></script>
 </body>
 </html>
