--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- About Text -->
         <section class="about-text">
             <p class="about-text__description">
-                Я продуктовый дизайнер из&#160;Таджикистана. Уже 4 года проектирую и прототипирую цифровые продукты. В&#160;свободное время изучаю ИИ инструменты и экспериментирую с&#160;вайбкодингом.
+                Я продуктовый дизайнер из&#160;Таджикистана. Уже&#160;4&#160;года проектирую и&#160;прототипирую цифровые продукты. В&#160;свободное время изучаю ИИ инструменты и&#160;экспериментирую с&#160;вайбкодингом.
             </p>
         </section>
 
